--- a/Main_WebsiteIteration_1/homepage.html
+++ b/Main_WebsiteIteration_1/homepage.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EasyPantry - Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="easypantry.css" />
     <script src="header.js"></script>
     <script>
@@ -15,5 +25,10 @@
   <body>
     <!-- Loads header from header.js -->
     <div id="header"></div>
+    <div class="page-container">
+      <div class="page-content">
+        <!-- Insert page content here -->
+      </div>
+    </div>
   </body>
 </html>
