Updated browse ingredients page with reusable filter components

--- a/Main_WebsiteIteration_1/calculator.html
+++ b/Main_WebsiteIteration_1/calculator.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>EasyPantry - Substitution Calculator</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,15 +13,19 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="easypantry.css" />
     <link rel="stylesheet" href="calculator-styles.css" />
+    <!-- Header Script -->
     <script src="header.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         addHeader("calculator");
       });
     </script>
+    <!-- Bring in jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Filters script & calculator script -->
     <script src="filters-script.js"></script>
     <script src="calculator-script.js"></script>
   </head>
