--- a/Main_WebsiteIteration_1/BrowseIngredients.html
+++ b/Main_WebsiteIteration_1/BrowseIngredients.html
@@ -1,302 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>EasyPantry - Browse Ingredients</title>
-    <link rel="stylesheet" href="easypantry.css">
-    <style>
-        #ingredients-container {
-            height: 50%;
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-            flex-flow: space-between;
-        }
-        .tile {
-            width: 349px;
-            height: 405px;
-            border-radius: 10px;
-            border-width: 2px;
-            border-color:#DAD7CD;
-            border-style: solid;
-            margin:5px;
-            text-align: center;
-            text-overflow: ellipsis;
-        }
-        .view-btn {
-            width: 197px;
-            height: 62px;
-            border-radius: 10px;
-            border-width: 2px;
-            border-color: #749475;
-            background-color: white;;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 100%;
-            letter-spacing: 0%;
-            text-align: center;
-            color:#5D7E5E;
-        }
-        #search {
-            width: 80%;
-            padding: 5px;
-            border: 2px solid #DAD7CD;
-            border-radius:20px;
-            padding-left:30px;
-            font-size: 15px;
-            color:#A4A298;
-            
-        }
-        .filter-tabs {
-        display: flex; /* Ensure the tabs are aligned in a row */
-        flex-wrap: wrap; /* Allow wrapping if necessary */
-        margin: 10px 0 10px;
-    }
-
-    .filter-tab {
-        display: flex; /* Use flexbox for alignment */
-        align-items: center; /* Vertically center the text */
-        justify-content: center; /* Horizontally center the text */
-        padding: 10px;
-        margin-right: 5px;
-        cursor: pointer;
-        width: 132px;
-        height: 98px;
-        border-radius: 20px;
-        background-color: #5D7E5E;
-        text-align: center;
-        color: white; /* Ensure text is visible */
-        font-size: 16px; /* Adjust font size as needed */
-        font-family: Quicksand;
-        font-weight: 600;
-        font-size: 32px;
-        line-height: 50px;
-        letter-spacing: 0%;
-        color:white;
-        width:auto;
-        padding:0 30px 0 30px;
-
-    }
-
-    .filter-tab.active {
-        background-color: #9DBF9E;
-        color:#333333;
-    }
-        #tags-container {
-            position: relative; /* Ensures the dropdown menu is positioned relative to this container */
-        }
-
-        #tags-dropdown-menu {
-            position: absolute; /* Makes the dropdown menu overlay */
-            top: 100%; /* Positions the menu directly below the button */
-            left: 0;
-            background-color: white;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            z-index: 10; /* Ensures the dropdown appears above other elements */
-            display: none; /* Initially hidden */
-            padding: 10px;
-            width: 200px;
-            border-radius: 20px;
-            font-size:18px;
-        }
-
-        #tags-dropdown-button {
-            cursor: pointer;
-            width: 200px;
-            height: 100px;
-            background-color: #ED6A5A;
-            font-family: Quicksand;
-            font-weight: 600;
-            font-size: 32px;
-            line-height: 50px;
-            letter-spacing: 0%;
-            color:white;
-            border-radius: 20px;
-            border: none;
-        }
-        .tag-filter {
-            margin-bottom:10px;
-        }
-
-        .search-container {
-            display: flex;
-            align-items: left;
-            margin-bottom: 10px;
-            flex-direction: row;
-            justify-content: space-between;
-            border-radius: 20px;;
-        }
-
-        .browse-ingredients {
-            font-weight: 600;
-            font-size: 48px;
-            line-height: 100%;
-            letter-spacing: 0%;
-            vertical-align: middle;
-            color:#333333;
-        }
-        .maincontent {
-            margin:auto;
-            margin-top: 20px;
-            width:94%;
-            border:none;        }
-        .ing-img {
-            height: 164px; 
-            object-fit: cover; 
-            width: 100%;
-            border-top-left-radius: 8px; /* Rounded top-left corner */
-            border-top-right-radius: 8px; /* Rounded top-right corner */
-        }
-
-        .tile-name{
-            font-weight: 700;
-            font-size: 24px;
-            line-height: 100%;
-            letter-spacing: 0%;
-            padding:0 30px 0 30px;
-        }
-
-        .tile-text {
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 1.2; /* Adjust line height for better spacing */
-        letter-spacing: 0%;
-        text-align: center;
-        padding: 0 30px 0 30px;
-        text-overflow: ellipsis; /* Adds "..." when text overflows */
-        overflow: hidden; /* Hides overflowing text */
-        display: -webkit-box; /* Enables the use of line clamping */
-        -webkit-line-clamp: 3; /* Limits the text to 3 lines */
-        -webkit-box-orient: vertical; /* Specifies vertical orientation for the box */
-        height: 70px; /* Ensures the height matches the clamped lines */
-    }
-    </style>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="easypantry.css" />
+    <link rel="stylesheet" href="browse-ingredients-styles.css" />
     <!-- Bring in jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Header Script -->
     <script src="header.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         addHeader("ingredients");
       });
     </script>
-</head>
-<body>
+    <!-- Filters script -->
+    <script src="filters-script.js"></script>
+    <!-- jQuery to auto-populate gallery from JSON file -->
+    <script src="browse-ingredients-script.js"></script>
+  </head>
+  <body>
     <!-- Loads header from header.js -->
     <div id="header"></div>
-    <div class="maincontent">
-        <h1 class="browse-ingredients" >Browse Ingredients</h1>
-        <!--Search input-->
-            <label for="search" style="display:none">Search Ingredients:</label>
-            <div class="search-container">
-             <input type="text" id="search" placeholder="Search for the ingredient to learn more about substitutions (e.g, eggs, milk, cornstarch).">
-                <!--Tags dropdown-->
-                <div id="tags-container">
-                    <div class="dropdown">
-                        <button id="tags-dropdown-button">Tags</button>
-                        <div id="tags-dropdown-menu" style="display: none;">
-                            <label><input type="checkbox" class="tag-filter" value="vegan">Vegan</label><br>
-                            <label><input type="checkbox" class="tag-filter" value="vegetarian">Vegetarian</label><br>
-                            <label><input type="checkbox" class="tag-filter" value="nut free">Nut-Free</label><br>
-                            <label><input type="checkbox" class="tag-filter" value="dairy free">Dairy-Free</label><br>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <!--Filters by Category-->
-        <div class="filter-tabs">
-            <div class="filter-tab" data-category="all">All</div>
-            <div class="filter-tab" data-category="Produce">Produce</div>
-            <div class="filter-tab" data-category="Dairy">Dairy</div>
-            <div class="filter-tab" data-category="Grains">Grains</div>
-            <!-- Add more categories as needed -->
+    <div class="page-container">
+      <div class="page-content">
+        <h1 id="page-title">Browse Ingredients</h1>
+        <!-- Filters, populated by filters script -->
+        <div id="ingredient-filters">
+          <div id="ingredient-search-container"></div>
+          <div id="ingredient-category-filters-container"></div>
+          <div id="ingredient-tag-filters-container"></div>
         </div>
         <!--Ingredients Gallery-->
         <div id="ingredients-container">
-            <!-- jQuery will auto-populate gallery -->
+          <!-- jQuery will auto-populate gallery -->
         </div>
+      </div>
     </div>
-    <!-- jQuery to auto-populate gallery from JSON file -->
-    <script>
-        $(document).ready(function() {
-            // Get JSON File
-            $.getJSON('sampledata.json', function(data) {
-                var ingredients = data;
-                var container = $('#ingredients-container');
-                var currentCategory = 'all';
-                var currentSearchTerm = '';
-                var selectedTags = [];
-
-                // Function to display ingredients
-                function displayIngredients(ingredients) {
-                    container.empty();
-                    $.each(ingredients, function(index, ingredient) {
-                        var tile = $('<div class="tile"></div>');
-                        var img = $('<img class="ing-img">')
-                            .attr('src', ingredient.image)
-                            .attr('alt', ingredient.name)
-                            .css({
-                                height: '164px', // Set the height explicitly
-                                objectFit: 'cover', // Ensure the image fills the space without distortion
-                                width: '100%' // Ensure the image spans the full width of the container
-                            });
-                        var name = $('<h2 class="tile-name"></h2>').text(ingredient.name);
-                        var description = $('<p class="tile-text"></p>').text(ingredient.description);
-                        var button = $('<button class="view-btn">View Ingredient</button>').attr('onclick', `window.location.href='calculator.html?ingredientId=${ingredient.id}'`);
-                        tile.append(img, name, description, button);
-                        container.append(tile);
-                    });
-                }
-
-                // Function to filter ingredients based on search, category, and tags
-                function filterIngredients() {
-    var filteredIngredients = ingredients.filter(function(ingredient) {
-        var matchesCategory = currentCategory === 'all' || ingredient.category === currentCategory;
-        var matchesSearch = ingredient.name.toLowerCase().includes(currentSearchTerm);
-        var matchesTags = selectedTags.length === 0 || selectedTags.some(tag => 
-            ingredient.tags.map(t => t.toLowerCase().replace('-', ' ')).includes(tag.toLowerCase())
-        ); // Normalize tags by replacing hyphens with spaces and converting to lowercase
-        return matchesCategory && matchesSearch && matchesTags;
-    });
-    displayIngredients(filteredIngredients);
-}
-
-
-                // Display all ingredients initially
-                displayIngredients(ingredients);
-
-                // Search functionality
-                $('#search').on('input', function() {
-                    currentSearchTerm = $(this).val().toLowerCase();
-                    filterIngredients();
-                });
-
-                // Filter by category functionality
-                $('.filter-tab').on('click', function() {
-                    currentCategory = $(this).data('category');
-                    $('.filter-tab').removeClass('active');
-                    $(this).addClass('active');
-                    filterIngredients();
-                });
-
-                // Dropdown toggle functionality
-                $('#tags-dropdown-button').on('click', function() {
-                    $('#tags-dropdown-menu').toggle();
-                });
-
-                // Filter by tags functionality
-                $('.tag-filter').on('change', function() {
-                    selectedTags = $('.tag-filter:checked').map(function() {
-                        return $(this).val();
-                    }).get();
-                    filterIngredients();
-                });
-
-                // Set default active filter
-                $('.filter-tab[data-category="all"]').addClass('active');
-            }).fail(function() {
-                console.error('Error fetching ingredients.');
-            });
-        });
-    </script>
-</body>
+  </body>
 </html>
