--- a/Main_WebsiteIteration_1/homepage.html
+++ b/Main_WebsiteIteration_1/homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EasyPantry - Home</title>
+    <!---Fonts--->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,11 +15,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+    <!---Stylesheet--->
     <link rel="stylesheet" href="easypantry.css" />
+    <!---Header Script--->
     <script src="header.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -27,52 +26,44 @@
     </script>
 
     <style>
-      body {
-        font-family: "Poppins", sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f8f4e3;
-        color: rgb(6, 6, 6);
-        overflow-x: hidden;
+      a {
+        text-decoration: none;
       }
       .hero {
-        padding: 50px 20px;
-        position: relative;
-        z-index: 2;
-        text-align: center;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 20px;
       }
-      .hero h1 {
-        font-size: 30px;
-        margin-bottom: 20px;
+      .hero-content {
+        flex: 1;
+        min-width: 300px;
       }
-      .headings {
-        font-size: 20px;
-        margin-left: 100px;
+      .hero-image {
+        flex: 1;
+        min-width: 250px;
+      }
+      .hero-image img {
+        max-width: 100%;
+        height: auto;
       }
       .search-bar {
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-        width: 100%;
         max-width: 500px;
+        margin-top: 30px;
       }
       .search-bar input {
         flex: 1;
-        padding: 10px;
+        padding: 15px;
         border-radius: 10px;
         border: none;
         outline: none;
-        padding: 20px;
+        font-size: 16px;
       }
       .search-bar button {
-        padding: 20px;
         margin-left: 10px;
-        border: none;
-        background-color: #ed6a5a;
-        color: #fff;
-        border-radius: 10px;
-        cursor: pointer;
       }
       .quick-picks,
       .categories {
@@ -84,35 +75,69 @@
       }
       .quick-picks {
         margin: 40px 20px;
+        gap: 20px;
       }
       .categories {
         margin: 40px 20px 40px;
       }
       .card {
-        background-color: #ffffff;
-        color: black;
-        padding: 15px;
+        width: 180px;
+        min-height: 220px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
         margin: 10px;
-        width: 150px;
+        border-radius: 15px;
+        background-color: #ffffff;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        font-family: "Quicksand", sans-serif;
+      }
+      .card p {
+        font-size: 14px;
+        margin-top: 10px;
         text-align: center;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        line-height: 1.4;
       }
       .card img {
-        width: 40px;
-        height: 40px;
-        margin-bottom: 5px;
+        border-radius: 50%;
+        background: #f7e785;
+        padding: 5px;
+      }
+      .sub-list {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        font-size: 14px;
+      }
+      .sub-list li::before {
+        content: "→ ";
       }
       .categories button {
         background-color: #9dbf9e;
-        width: 100px;
-        height: 100px;
         border: none;
-        padding: 10px 15px;
-        border-radius: 10px;
-        margin: 5px;
+        padding: 10px;
+        border-radius: 12px;
+        width: 140px;
+        height: 120px;
+        margin: 10px;
         cursor: pointer;
-        font-size: 18px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: "Quicksand", sans-serif;
+        font-size: 14px;
         text-align: center;
+        transition: background-color 0.2s ease;
+      }
+      .categories button:hover {
+        background-color: #8daf8e
+      }
+      .category-button img {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 8px;
       }
       .calculator-section {
         background-color: #fff;
@@ -155,13 +180,8 @@
         align-items: center;
       }
       .browse {
-        background-color: #ed6a5a;
-        color: #fff;
-        border: none;
-        padding: 20px 20px;
-        margin: 30px;
-        border-radius: 10px;
-        cursor: pointer;
+        margin: 30px auto;
+        display: block;
       }
 
       @media (max-width: 768px) {
@@ -172,13 +192,21 @@
         .hero h1 {
           font-size: 28px;
         }
+        .hero {
+          flex-direction: column;
+        }
+        .hero-image {
+          text-align: center;
+        }
+        .hero-image img {
+         width: 80%;
+        }
         .headings {
           font-size: 28px;
         }
         .search-bar {
           flex-direction: column;
         }
-
         .calculator-section {
           flex-direction: column;
           text-align: center;
@@ -186,76 +214,84 @@
       }
     </style>
   </head>
+
   <body>
     <!-- Loads header from header.js -->
     <div id="header"></div>
     <div class="page-container">
       <div class="page-content">
         <section class="hero">
-          <h1>Cook with what you've got - Smart ingredient swaps in seconds</h1>
-          <div class="search-bar">
-            <input type="text" placeholder="Search for ingredients" />
-            <button>Search</button>
+          <div class="hero-content">
+            <h1 id="page-title">Cook with what you've got - Smart ingredient swaps in seconds</h1>
+            <div class="search-bar">
+              <input type="text" id="search-bar input" placeholder="Search for ingredients..." />
+              <button class="button-style">Search</button>
+            </div>
+          </div>
+          <div class="hero-image">
+            <img src="EP_Heroimg.png" alt="Cooking illustration"/>
           </div>
         </section>
 
-        <p class="headings">Popular Substitutions</p>
+        <h2 id="section-title">Popular Substitutions</h2>
         <section class="quick-picks">
           <div class="card">
             <img
               src="https://img.icons8.com/emoji/48/egg-emoji.png"
-              alt="Egg"
+              alt="Egg Icon"
             />
             <strong>Eggs</strong>
-            <p>→ Mashed Banana<br />→ Flaxseed Meal</p>
+            <ul class="sub-list">
+              <li>Mashed Banana</li>
+              <li>Flaxseed Meal</li>
+            </ul>
           </div>
           <div class="card">
             <img
               src="https://img.icons8.com/fluency/48/milk-bottle.png"
-              alt="Milk"
+              alt="Milk Icon"
             />
             <strong>Milk</strong>
-            <p>→ Almond Milk<br />→ Oat Milk</p>
+            <ul class="sub-list">
+              <li>Oatmilk</li>
+              <li>Almond Milk</li>
+            </ul>
           </div>
           <div class="card">
-            <img
-              src="https://img.icons8.com/color/48/corn.png"
-              alt="Cornstarch"
-            />
+            <img src="https://img.icons8.com/color/48/corn.png" alt="Cornstarch Icon"/>
             <strong>Cornstarch</strong>
-            <p>→ Arrowroot Powder<br />→ Flaxseed Meal</p>
+            <ul class="sub-list">
+              <li>Arrowroot Powder</li>
+              <li>Flaxseed Meal</li>
+            </ul>
           </div>
           <div class="card">
-            <img src="food.png" alt="Quick Picks" />
-            <strong>Extra Card</strong>
-            <p>→ Substitution<br />→ Substitution</p>
-          </div>
-          <div class="card">
-            <img src="food.png" alt="Quick Picks" />
-            <strong>Extra Card</strong>
-            <p>→ Substitution<br />→ Substitution</p>
+            <img src="https://img.icons8.com/color/48/butter.png" alt="Butter Icon" />
+            <strong>Butter</strong>
+            <ul class="sub-list">
+              <li>Coconut Oil</li>
+              <li>Almond Butter</li>
+            </ul>
           </div>
         </section>
 
-        <button class="browse">Browse All Ingredients →</button>
+        <a href="BrowseIngredients.html">
+        <button class="browse button-style">Browse All Ingredients →</button>
+        </a>
 
-        <p class="headings">Browse by Category</p>
+        <h2 id="section-title">Browse by Category</h2>
         <section class="categories">
           <button class="categories">
-            <img
-              width="30"
-              height="30"
-              src="https://img.icons8.com/ios/30/leaf--v1.png"
-              alt="leaf--v1"
-            />Vegan
-          </button>
-          <button class="categories">Gluten-free</button>
-          <button class="categories">Dairy-free</button>
-          <button class="categories">High-Protein</button>
-          <button class="categories">Vegetarian</button>
-          <button class="categories">Low Carb</button>
-          <button class="categories">More Categories</button>
-          <button class="categories">More Categories</button>
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="36"  height="36"  viewBox="0 0 24 24"  fill="none"  stroke="#333"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-leaf"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 21c.5 -4.5 2.5 -8 7 -10" /><path d="M9 18c6.218 0 10.5 -3.288 11 -12v-2h-4.014c-9 0 -11.986 4 -12 9c0 1 0 3 2 5h3z" /></svg><br/>Vegan</button>
+          <button class="categories">
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="36"  height="36"  viewBox="0 0 24 24"  fill="none"  stroke="#333"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-wheat"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12.014 21.514v-3.75" /><path d="M5.93 9.504l-.43 1.604c-.712 2.659 .866 5.391 3.524 6.105c.997 .268 1.993 .535 2.99 .801v-3.44c-.164 -2.105 -1.637 -3.879 -3.676 -4.426l-2.408 -.644z" /><path d="M13.744 11.164c.454 -.454 .815 -.994 1.061 -1.587c.246 -.594 .372 -1.23 .372 -1.873c0 -.643 -.126 -1.279 -.372 -1.872c-.246 -.594 -.606 -1.133 -1.061 -1.588l-1.73 -1.73l-1.73 1.73c-.454 .454 -.815 .994 -1.06 1.588c-.246 .594 -.372 1.23 -.373 1.872c0 .643 .127 1.279 .373 1.873c.246 .594 .606 1.133 1.06 1.587" /><path d="M18.099 9.504l.43 1.604c.712 2.659 -.866 5.391 -3.525 6.105c-.997 .268 -1.994 .535 -2.99 .801v-3.44c.164 -2.105 1.637 -3.879 3.677 -4.426l2.408 -.644z" /></svg><br/>Gluten-free</button>
+          <button class="categories"><svg  xmlns="http://www.w3.org/2000/svg"  width="36"  height="36"  viewBox="0 0 24 24"  fill="none"  stroke="#333"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-milk"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 6h8v-2a1 1 0 0 0 -1 -1h-6a1 1 0 0 0 -1 1v2z" /><path d="M16 6l1.094 1.759a6 6 0 0 1 .906 3.17v8.071a2 2 0 0 1 -2 2h-8a2 2 0 0 1 -2 -2v-8.071a6 6 0 0 1 .906 -3.17l1.094 -1.759" /><path d="M12 16m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M10 10h4" /></svg><br/>Dairy-free</button>
+          <button class="categories">
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="36"  height="36"  viewBox="0 0 24 24"  fill="none"  stroke="#333"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-meat"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13.62 8.382l1.966 -1.967a2 2 0 1 1 3.414 -1.415a2 2 0 1 1 -1.413 3.414l-1.82 1.821" /><path d="M5.904 18.596c2.733 2.734 5.9 4 7.07 2.829c1.172 -1.172 -.094 -4.338 -2.828 -7.071c-2.733 -2.734 -5.9 -4 -7.07 -2.829c-1.172 1.172 .094 4.338 2.828 7.071z" /><path d="M7.5 16l1 1" /><path d="M12.975 21.425c3.905 -3.906 4.855 -9.288 2.121 -12.021c-2.733 -2.734 -8.115 -1.784 -12.02 2.121" /></svg><br/>High-Protein</button>
+          <button class="categories">
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="36"  height="36"  viewBox="0 0 24 24"  fill="none"  stroke="#333"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-carrot"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 21s9.834 -3.489 12.684 -6.34a4.487 4.487 0 0 0 0 -6.344a4.483 4.483 0 0 0 -6.342 0c-2.86 2.861 -6.347 12.689 -6.347 12.689z" /><path d="M9 13l-1.5 -1.5" /><path d="M16 14l-2 -2" /><path d="M22 8s-1.14 -2 -3 -2c-1.406 0 -3 2 -3 2s1.14 2 3 2s3 -2 3 -2z" /><path d="M16 2s-2 1.14 -2 3s2 3 2 3s2 -1.577 2 -3c0 -1.86 -2 -3 -2 -3z" /></svg>
+            <br/>Vegetarian</button>
+          <button class="categories"><svg  xmlns="http://www.w3.org/2000/svg"  width="36"  height="36"  viewBox="0 0 24 24"  fill="none"  stroke="#333"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-baguette"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5.628 11.283l5.644 -5.637c2.665 -2.663 5.924 -3.747 8.663 -1.205l.188 .181a2.987 2.987 0 0 1 0 4.228l-11.287 11.274a3 3 0 0 1 -4.089 .135l-.143 -.135c-2.728 -2.724 -1.704 -6.117 1.024 -8.841z" /><path d="M9.5 7.5l1.5 3.5" /><path d="M6.5 10.5l1.5 3.5" /><path d="M12.5 4.5l1.5 3.5" /></svg><br/>Low Carb</button>
         </section>
 
         <section class="calculator-section">
@@ -267,7 +303,7 @@
               exact substitution measurements.
             </p>
           </div>
-          <button>Go to Calculator</button>
+          <button class="button-style">Go to Calculator</button>
         </section>
 
         <footer>
