--- a/Main_WebsiteIteration_1/BrowseIngredients.html
+++ b/Main_WebsiteIteration_1/BrowseIngredients.html
@@ -21,9 +21,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Header Script -->
     <script src="header.js"></script>
+    <!-- Footer Script -->
+    <script src="footer.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         addHeader("ingredients");
+        addFooter();
       });
     </script>
     <!-- Filters script -->
@@ -49,5 +52,6 @@
         </div>
       </div>
     </div>
+    <div id="footer"></div>
   </body>
 </html>
