--- a/Main_WebsiteIteration_1/calculator.html
+++ b/Main_WebsiteIteration_1/calculator.html
@@ -18,9 +18,12 @@
     <link rel="stylesheet" href="calculator-styles.css" />
     <!-- Header Script -->
     <script src="header.js"></script>
+    <!-- Footer Script -->
+    <script src="footer.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         addHeader("calculator");
+        addFooter();
       });
     </script>
     <!-- Bring in jQuery -->
@@ -65,5 +68,6 @@
         </div>
       </div>
     </div>
+    <div id="footer"></div>
   </body>
 </html>
