--- a/Main_WebsiteIteration_1/RequestPage.html
+++ b/Main_WebsiteIteration_1/RequestPage.html
@@ -43,10 +43,11 @@
     />
   <script src="header.js"></script>
   <script>
-  document.addEventListener("DOMContentLoaded", function () {
-  addHeader("home");
-  });
-  </script>
+      document.addEventListener("DOMContentLoaded", function () {
+        addHeader("request");
+        addFooter();
+      });
+    </script>
   <style>
     .form-group {
       display: flex;
