--- a/Main_WebsiteIteration_1/RequestPage.html
+++ b/Main_WebsiteIteration_1/RequestPage.html
@@ -42,6 +42,7 @@
       rel="stylesheet"
     />
   <script src="header.js"></script>
+  <script src="footer.js"></script>
   <script>
       document.addEventListener("DOMContentLoaded", function () {
         addHeader("request");
