--- a/Main_WebsiteIteration_1/homepage.html
+++ b/Main_WebsiteIteration_1/homepage.html
@@ -95,14 +95,13 @@
         color: white;
       }
       .card {
-        width: 180px;
+        width: 100%;
         min-height: 220px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
         padding: 20px;
-        margin: 10px;
         border-radius: 15px;
         background-color: #ffffff;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
