--- a/Main_WebsiteIteration_1/contact.html
+++ b/Main_WebsiteIteration_1/contact.html
@@ -196,7 +196,7 @@ addHeader("home");
                  Contact Information
         </h3>
 
-            <p> Hours of Operations: 9:00 a.m - 3:00 p.m (PST)</p> 
+            <p> Hours of Operations: Monday - Friday; 9:00 a.m - 3:00 p.m (PST)</p> 
             <p>
             <a href="tel: +44 20 7123 4567"> +44 20 7123 4567</a>
             </p>
