--- a/Main_WebsiteIteration_1/contact.html
+++ b/Main_WebsiteIteration_1/contact.html
@@ -210,7 +210,7 @@ addHeader("home");
                 <li>Cant find an ingredient?</li>
                 <ul>Please refer to the feedback page to add your favorite ingredients</ul>
                 <li>How can I contribute?</li>
-                <ul>Provide feedback! Add us on Linkdin, follow for weekly recipe substitutions and carreer opportunities.</ul>
+                <ul>Provide feedback! Add us on Linkdin, follow for weekly recipe substitutions and carreer opportunities</ul>
                 <li>How do I report a technical issue</li>
                 <ul>Please send an email to us at Easypantry@gmail.com</ul>
             </ul>
