--- a/Main_WebsiteIteration_1/about.html
+++ b/Main_WebsiteIteration_1/about.html
@@ -17,13 +17,15 @@
     />
     <!---Stylesheet--->
     <link rel="stylesheet" href="easypantry.css" />
+    <!-- Bring in jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!---Header Script--->
     <script src="header.js"></script>
     <!-- Footer Script -->
     <script src="footer.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        addHeader("home");
+        addHeader("about");
         addFooter();
       });
     </script>
