--- a/Main_WebsiteIteration_1/homepage.html
+++ b/Main_WebsiteIteration_1/homepage.html
@@ -18,6 +18,8 @@
     <!---Stylesheets--->
     <link rel="stylesheet" href="easypantry.css" />
     <link rel="stylesheet" href="hompage.css" />
+    <!-- Bring in jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!---Header Script--->
     <script src="header.js"></script>
     <!-- Footer Script -->
@@ -262,14 +264,14 @@
         <section class="calculator-section">
           <div>
             <h3>Try our Substitution Calculator</h3>
-            <br/>
+            <br />
             <p>
               Out of 3 eggs? Not enough flour? Enter your recipe amount and get
               exact substitution measurements.
             </p>
           </div>
           <a href="calculator.html">
-          <button class="button-style">Go to Calculator</button>
+            <button class="button-style">Go to Calculator</button>
           </a>
         </section>
 
@@ -278,19 +280,37 @@
           <h2 class="section-title">How It Works</h2>
           <section class="steps">
             <div class="step">
-              <img src="https://img.icons8.com/ios-filled/50/search.png" alt="Search" />
+              <img
+                src="https://img.icons8.com/ios-filled/50/search.png"
+                alt="Search"
+              />
               <h3>Search or Browse</h3>
-              <p>Look up your missing ingredient or explore categories tailored to your needs.</p>
+              <p>
+                Look up your missing ingredient or explore categories tailored
+                to your needs.
+              </p>
             </div>
             <div class="step">
-              <img src="https://img.icons8.com/ios-filled/50/replace.png" alt="Substitute" />
+              <img
+                src="https://img.icons8.com/ios-filled/50/replace.png"
+                alt="Substitute"
+              />
               <h3>Find Substitutes</h3>
-              <p>View the best alternative ingredients based on dietary preferences or availability.</p>
+              <p>
+                View the best alternative ingredients based on dietary
+                preferences or availability.
+              </p>
             </div>
             <div class="step">
-              <img src="https://img.icons8.com/ios-filled/50/cooking-book.png" alt="Cook Confidently" />
+              <img
+                src="https://img.icons8.com/ios-filled/50/cooking-book.png"
+                alt="Cook Confidently"
+              />
               <h3>Cook Confidently</h3>
-              <p>Use your chosen substitute and enjoy stress-free cooking with what you have!</p>
+              <p>
+                Use your chosen substitute and enjoy stress-free cooking with
+                what you have!
+              </p>
             </div>
           </section>
         </section>
@@ -299,13 +319,25 @@
         <section class="why-easy-pantry">
           <h2 class="section-title">Why Easy Pantry?</h2>
           <section class="quick-picks">
-          <ul>
-            <li>✅ <strong>Comprehensive Database:</strong> More substitutions than any recipe site.</li>
-            <li>✅ <strong>Smart Search & Filters:</strong> Quickly find what you need without digging.</li>
-            <li>✅ <strong>Diet-Friendly:</strong> Vegan, gluten-free, and allergy-safe options.</li>
-            <li>✅ <strong>Mobile-First:</strong> Designed for fast use while you're shopping.</li>
-          </ul>
-        </section>
+            <ul>
+              <li>
+                ✅ <strong>Comprehensive Database:</strong> More substitutions
+                than any recipe site.
+              </li>
+              <li>
+                ✅ <strong>Smart Search & Filters:</strong> Quickly find what
+                you need without digging.
+              </li>
+              <li>
+                ✅ <strong>Diet-Friendly:</strong> Vegan, gluten-free, and
+                allergy-safe options.
+              </li>
+              <li>
+                ✅ <strong>Mobile-First:</strong> Designed for fast use while
+                you're shopping.
+              </li>
+            </ul>
+          </section>
         </section>
       </div>
     </div>
