--- a/Main_WebsiteIteration_1/calculator.html
+++ b/Main_WebsiteIteration_1/calculator.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>EasyPantry - Substitution Calculator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
