--- a/Main_WebsiteIteration_1/BrowseIngredients.html
+++ b/Main_WebsiteIteration_1/BrowseIngredients.html
@@ -31,9 +31,9 @@
       });
     </script>
     <!-- Filters script -->
-    <script src="filters-script.js"></script>
+    <script type="module src="filters-script.js"></script>
     <!-- jQuery to auto-populate gallery from JSON file -->
-    <script src="browse-ingredients-script.js"></script>
+    <script type="module src="browse-ingredients-script.js"></script>
   </head>
   <body>
     <!-- Loads header from header.js -->
