--- a/Main_WebsiteIteration_1/homepage.html
+++ b/Main_WebsiteIteration_1/homepage.html
@@ -110,7 +110,7 @@
 
         <h2 class="section-title">Browse by Diet</h2>
         <section class="categories reveal">
-          <button class="category">
+          <button class="category" id="vegan-category">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="36"
@@ -131,7 +131,7 @@
             </svg>
             <br />Vegan
           </button>
-          <button class="category">
+          <button class="category" id="gluten-free-category">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="36"
@@ -158,7 +158,7 @@
             </svg>
             <br />Gluten-free
           </button>
-          <button class="category">
+          <button class="category" id="dairy-free-category">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="36"
@@ -181,7 +181,7 @@
             </svg>
             <br />Dairy-free
           </button>
-          <button class="category">
+          <button class="category" id="high-protein-category">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="36"
@@ -208,7 +208,7 @@
             </svg>
             <br />High-Protein
           </button>
-          <button class="category">
+          <button class="category" id="vegetarian-category">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="36"
@@ -236,7 +236,7 @@
             </svg>
             <br />Vegetarian
           </button>
-          <button class="category">
+          <button class="category" id="low-carb-category">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="36"
@@ -369,6 +369,35 @@
         $("#butter-card").on("click", function () {
           window.location.href = "calculator.html?ingredientId=22";
         });
+
+        // Handle category button clicks
+        $("#vegan-category").on("click", function () {
+          window.location.href = "BrowseIngredients.html?tags=Vegan";
+        });
+        $("#gluten-free-category").on("click", function () {
+          window.location.href = "BrowseIngredients.html?tags=Gluten-Free";
+        });
+        $("#dairy-free-category").on("click", function () {
+          window.location.href = "BrowseIngredients.html?tags=Dairy-Free";
+        });
+        $("#high-protein-category").on("click", function () {
+          window.location.href = "BrowseIngredients.html?tags=High-Protein";
+        });
+        $("#vegetarian-category").on("click", function () {
+          window.location.href = "BrowseIngredients.html?tags=Vegetarian";
+        });
+        $("#low-carb-category").on("click", function () {
+          window.location.href = "BrowseIngredients.html?tags=Low-Carb";
+        });
+
+        $(".category").hover(
+          function () {
+            $(this).children("svg").css("stroke", "white");
+          },
+          function () {
+            $(this).children("svg").css("stroke", "#333");
+          }
+        );
 
         function revealOnScroll() {
           $(".reveal").each(function () {
