Small addition to browse ingredients page

--- a/Main_WebsiteIteration_1/BrowseIngredients.html
+++ b/Main_WebsiteIteration_1/BrowseIngredients.html
@@ -51,6 +51,7 @@
         <div id="ingredients-container">
           <!-- jQuery will auto-populate gallery -->
         </div>
+        <p><em>Can't find the ingredient you're looking for? Request it <a href='RequestPage.html'>here.</a></em></p>
       </div>
     </div>
     <div id="footer"></div>
