--- a/Main_WebsiteIteration_1/homepage.html
+++ b/Main_WebsiteIteration_1/homepage.html
@@ -287,7 +287,7 @@
               <h3>Search or Browse</h3>
               <p>
                 Look up your missing ingredient or explore categories tailored
-                to your needs.
+                to your needs or dietary preferences.
               </p>
             </div>
             <div class="step">
@@ -297,8 +297,7 @@
               />
               <h3>Find Substitutes</h3>
               <p>
-                View the best alternative ingredients based on dietary
-                preferences or availability.
+                View the best alternative ingredients and/or use our substitution calculator to find the correct amount to use.
               </p>
             </div>
             <div class="step">
@@ -309,7 +308,7 @@
               <h3>Cook Confidently</h3>
               <p>
                 Use your chosen substitute and enjoy stress-free cooking with
-                what you have!
+                the ingredients you have!
               </p>
             </div>
           </section>
