--- a/Main_WebsiteIteration_1/contact.html
+++ b/Main_WebsiteIteration_1/contact.html
@@ -29,6 +29,14 @@
         addFooter();
       });
     </script>
+    <script>
+      function handleSubmit(event) {
+        event.preventDefault(); // Prevent the default form submission behavior
+        const formContainer = document.querySelector("#contact-form");
+        formContainer.innerHTML =
+          "<p>Thank you for the request. We will review this when we can!</p>";
+      }
+    </script>
   </head>
   <body>
     <!-- Loads header from header.js -->
@@ -42,7 +50,7 @@
         <div class="sections">
           <div class="container">
             <h3>Report a technical issue</h3>
-            <form action="action_page.php">
+            <form id="contact-form" onSubmit="handleSubmit(event)">
               <label for="fname">First Name</label>
               <input
                 type="text"
